--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       USERNAME: ${{ vars.DOCKERHUB_USERNAME }}
+      API_URL: ${{ vars.API_URL }}
 
     steps:
       - name: Get Code
