--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,4 +30,6 @@ jobs:
         with:
           context: .
           push: true
+          args:
+            API_URL: ${{ env.API_URL }}
           tags: ${{ env.USERNAME }}/lookhin-image-watermark-gallery:latest
