--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,5 +31,5 @@ jobs:
           context: .
           push: true
           build-args:
-            API_URL: ${{ env.API_URL }}
+            - API_URL=${{ env.API_URL }}
           tags: ${{ env.USERNAME }}/lookhin-image-watermark-gallery:latest
