--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,6 @@ jobs:
         with:
           context: .
           push: true
-          build-args:
-            - API_URL=${{ env.API_URL }}
+          build-args: |
+            API_URL=${{ env.API_URL }}
           tags: ${{ env.USERNAME }}/lookhin-image-watermark-gallery:latest
